--- a/index.html
+++ b/index.html
@@ -26,7 +26,46 @@
 </head>
 
 <body>
-    <h1>Hello Worlds</h1>
+    <nav class="navbar">
+        <div class="header__title">
+            <h1>Adil Ughratdar</h1>
+
+        </div>
+
+        <div class="header__tabs">
+            <li>Projects</li>
+            <li>About me</li>
+            <li>Achievements</li>
+            <li>Contact</li>
+        </div>        
+    </nav>
+
+    <section class="section__introduction">
+        <div class="introduction__info">
+            <img src="./img/headshot.jpg" alt="headshot"/>
+            <h1>Adil Ughratdar!</h1>
+            <h3>Junior Developer</h3>
+            <h5>Computer Engineering student at the University of Ottawa. Have a passion for programming, have a look at some of my 
+                projects!
+            </h5>
+        </div>
+        
+    </section>
+
+    <section class="section__projects">
+        <div class="project__card">
+            
+        </div>
+        <h1>Welcome to my site!</h1>
+</section>
+
+<section class="section__achievements">
+    <h1>Welcome to my site!</h1>
+</section>
+
+<section class="section__introduction">
+    <h1>Welcome to my site!</h1>
+</section>
 </body>
 
 </html>
