added aboutme and achievements section

--- a/index.html
+++ b/index.html
@@ -230,7 +230,27 @@
                 </div>
             </div>
         </div>
+        <section class="section__about__me">
+            <h1>About me</h1>
+            <p>I'm Adil Ughratdar. I am a full-time student. In
+                my free time, I learn new technologies and build projects using React.
+            </p>
+            <p>
+                Intially I started out with Android Application development but lately been transitioning to web
+                development more. I have since, learnt a lot about the web, how to build beautiful websites from design,
+                and how to couple them up with my own backend.
+            </p>
+            <p>
+                I strive to make pixel perfect web applications, with a goal to create applications that would help
+                people everyday in their lives.
+            </p>
+            <p>
+                The purpose of me pursuing a career in web development is because of the sheer amount of options to
+                tackle any given problem, allow me to learn and grow myself while giving our customers the best quality
+                applications for their uses.
+            </p>
 
+        </section>
         <section class="section__projects">
             <h2>Projects</h2>
 
@@ -274,13 +294,37 @@
 
         </section>
 
-        <!-- <section class="section__achievements">
-        <h1>Welcome to my site!</h1>
-    </section>
-    
+        <section class="section__achievements">
+            <h1>Achievements</h1>
+            <img src="./img/udacity_full_stack_certificate_img.PNG" width="75%" />
+            <img src="./img/fullstackopen_7credit-certificate.PNG" width="75%" />
+            <img src="./img/100_days_of_code_completion.JPG" width="75%" />
+
+        </section>
+        <!---
     <section class="section__introduction">
         <h1>Welcome to my site!</h1>
     </section> -->
+
+        <section class="section__contact">
+            <h1 id="contact_title">Contact Me</h1>
+            <div class="page" id="contact_page">
+                <div id="container">
+                    <form action="mailto:aughr063@uottawa.ca" method="post" , enctype="text/plain">
+                        <label for="fname">First Name</label>
+                        <input type="text" id="fname" name="firstname" placeholder="First Name">
+
+                        <label for="lname">Last Name</label>
+                        <input type="text" id="lname" name="lastname" placeholder="Last Name">
+
+                        <label for="subject">Subject</label>
+                        <textarea id="subject" name="subject" placeholder="Write something.."
+                            style="height:150px"></textarea>
+
+                        <input type="submit" value="Submit">
+                    </form>
+                </div>
+        </section>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
 
