--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="content">
         <section class="section__introduction">
             <div class="introduction__info">
-                <img src="./img/headshot.jpg" alt="headshot" />
+                <img src="./img/headshot.jpeg" alt="headshot" />
                 <h1>Adil Ughratdar</h1>
                 <div>
                     <span class="type"></span>
